add screenshot illustration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-demo",
+  "name": "redux-minimal",
   "version": "0.1.0",
   "description": "Redux demo (without React)",
   "keywords": [],
