--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "redux": "^3.6.0",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "engines": {
     "node": ">= 7.0.0",
@@ -42,5 +42,6 @@
       "standard",
       "promise"
     ]
-  }
+  },
+  "dependencies": {}
 }
