--- a/package.json
+++ b/package.json
@@ -1,47 +1,23 @@
 {
   "name": "redux-minimal",
-  "version": "0.1.0",
-  "description": "Redux demo (without React)",
-  "keywords": [],
+  "version": "0.2.0",
+  "description": "Redux exercise (without React)",
   "author": "EDA",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.13.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "redux": "^3.6.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "engines": {
-    "node": ">= 7.0.0",
-    "npm": ">= 3.0.0"
-  },
   "scripts": {
     "start": "webpack-dev-server --hot --inline"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "env"
     ]
   },
-  "eslintConfig": {
-    "extends": [
-      "standard"
-    ],
-    "installedESLint": true,
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module"
-    },
-    "plugins": [
-      "standard",
-      "promise"
-    ]
-  },
-  "dependencies": {}
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "redux": "^3.7.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
+  }
 }
