--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
-    "dotenv": "^4.0.0",
+    "dotenv": "^5.0.1",
+    "email-validator": "^1.1.1",
     "express": "^4.15.3",
     "knex": "^0.14.2",
+    "mailgun-js": "^0.16.0",
     "moment": "^2.18.1",
     "pg": "^7.2.0"
   },
