changed node back to node server

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "jest test/client test/server",
     "test:watch": "yarn test --watchAll",
     "test:assert": "yarn test && yarn assert",
-    "start": "node"
+    "start": "node server"
   },
   "babel": {
     "presets": [
