--- a/package.json
+++ b/package.json
@@ -37,23 +37,25 @@
   },
   "precommit": "lint:assert, test:assert, e2e:assert",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "^5.0.1",
-    "email-validator": "^1.1.1",
-    "express": "^4.15.3",
-    "knex": "^0.14.4",
-    "mailgun-js": "^0.16.0",
-    "moment": "^2.18.1",
-    "pg": "^7.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.1",
+    "dotenv": "^5.0.1",
+    "email-validator": "^1.1.1",
+    "express": "^4.15.3",
+    "express-jwt": "^5.3.1",
     "input-moment": "^0.4.0",
+    "jsonwebtoken": "^8.2.0",
+    "knex": "^0.14.4",
+    "mailgun-js": "^0.16.0",
+    "moment": "^2.18.1",
+    "pg": "^7.4.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
@@ -78,9 +80,9 @@
     "jsdom": "^11.2.0",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
-    "raf": "^3.4.0",   
+    "raf": "^3.4.0",
     "redux-mock-store": "^1.3.0",
-    "sqlite3": "^3.1.9", 
+    "sqlite3": "^3.1.9",
     "supertest": "^3.0.0",
     "webpack-dev-server": "^2.11.1"
   }
