--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "knex": "^0.14.4",
     "mailgun-js": "^0.16.0",
     "moment": "^2.18.1",
+    "passport": "^0.4.0",
     "pg": "^7.4.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -62,6 +63,7 @@
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.1.0",
+    "sodium": "^2.0.3",
     "superagent": "^3.8.1",
     "webpack": "^3.11.0"
   },
