--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-jwt": "^5.3.1",
     "input-moment": "^0.4.0",
     "jsonwebtoken": "^8.2.0",
+    "jwt-decode": "^2.2.0",
     "knex": "^0.14.4",
     "mailgun-js": "^0.16.0",
     "moment": "^2.18.1",
