seperate dev and prod webpack

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "license": "ISC",
   "scripts": {
     "assert": "exit 0",
-    "build": "webpack --config ./client/webpack.config.js",
-    "dev": "nodemon --watch server & yarn build --watch",
+    "build:dev": "webpack --config ./client/webpack.dev.js",
+    "build:prod": "webpack --config ./client/webpack.prod.js",
+    "dev": "nodemon --watch server & yarn build:dev --watch",
     "e2e:sh": "cd ./test/e2e && codeceptjs shell",
     "e2e:debug": "codeceptjs run -c ./test/e2e/codecept.json --debug",
     "e2e": "codeceptjs run -c ./test/e2e/codecept.json",
@@ -20,7 +21,7 @@
     "seed": "yarn knex seed:run",
     "lint": "eslint client server test --ignore-pattern 'bundle.js'",
     "lint:assert": "yarn lint && yarn assert",
-    "postinstall": "yarn build && knex --knexfile ./server/db/knexfile.js migrate:latest",
+    "postinstall": "yarn build:prod && knex --knexfile ./server/db/knexfile.js migrate:latest",
     "test": "jest test/client test/server",
     "test:watch": "yarn test --watchAll",
     "test:assert": "yarn test && yarn assert",
