--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
   "precommit": "lint:assert, test:assert, e2e:assert",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
     "email-validator": "^1.1.1",
@@ -50,15 +56,16 @@
     "knex": "^0.14.4",
     "mailgun-js": "^0.16.0",
     "moment": "^2.18.1",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.1.0",
+    "superagent": "^3.8.1",
     "pg": "^7.4.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
     "codeceptjs-nightmare": "^1.1.0",
     "core-js": "^2.5.1",
     "enzyme": "^3.2.0",
@@ -76,17 +83,12 @@
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "raf": "^3.4.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.1.2",
-    "redux": "^3.7.2",
     "redux-mock-store": "^1.3.0",
-    "redux-thunk": "^2.1.0",
     "sqlite3": "^3.1.9",
-    "superagent": "^3.8.1",
     "supertest": "^3.0.0",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack-merge": "^4.1.2"
   }
 }
